volume add maLine, 移动端事件优化
1.volume add maLine
2.移动端事件优化

--- a/src/index.scss
+++ b/src/index.scss
@@ -50,6 +50,7 @@ html, body, ul {
 }
 #k-tooltips ul li span {
     text-align: left;
+    color: #43474c;
 }
 #k-tooltips ul li span:last-child {
     float: right;
